# verify-by-change

./: .gitignore  AGENTS.md  DECISIONS.md  LICENSE  Makefile  README.md  pyproject.toml  verify_by_change.py
.github/workflows/: ci.yml
examples/: verification-envelope.json
tests/: test_verify_by_change.py
