[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "verify-by-change"
version = "0.1.0"
description = "Suggest verification steps from changed file paths."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Manuel Sampedro" }]
keywords = ["codex", "verification", "review", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
verify-by-change = "verify_by_change:main"

[tool.setuptools]
py-modules = ["verify_by_change"]
